After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 638903 - [encodebin] missing-plugin support
[encodebin] missing-plugin support
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal blocker
: 0.10.32
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-01-07 12:05 UTC by Edward Hervey
Modified: 2011-01-07 12:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
encodebin: Add missing-plugin support (2.24 KB, patch)
2011-01-07 12:05 UTC, Edward Hervey
committed Details | Review

Description Edward Hervey 2011-01-07 12:05:34 UTC
It was missing and it's trivial to add.
Comment 1 Edward Hervey 2011-01-07 12:05:57 UTC
Created attachment 177743 [details] [review]
encodebin: Add missing-plugin support
Comment 2 Edward Hervey 2011-01-07 12:21:41 UTC
commit 251400a69b6f5e2dc39a4cc9d86c472a872d82c3
Author: Edward Hervey <edward.hervey@collabora.co.uk>
Date:   Fri Jan 7 13:04:11 2011 +0100

    encodebin: Add missing-plugin support
    
    https://bugzilla.gnome.org/show_bug.cgi?id=638903