encodebin: Add missing-plugin support

https://bugzilla.gnome.org/show_bug.cgi?id=638903