gst/encoding/gstencodebin.h
@@ -22,7 +22,7 @@
 #define __GST_ENCODEBIN_H__
 
 #include <gst/gst.h>
-#include <gst/pbutils/encoding-profile.h>
+#include <gst/pbutils/pbutils.h>
 #include "gstencode-marshal.h"
 
 #define GST_TYPE_ENCODE_BIN               (gst_encode_bin_get_type())
